# user-management-api/src/main/java/com/imqh/usermanagementapi/dto/response/UserResponse.java
@@ -1,15 +1,45 @@
 package com.imqh.usermanagementapi.dto.response;
 
+import com.fasterxml.jackson.annotation.JsonProperty;
+
 import java.time.LocalDateTime;
+import java.util.List;
 
 public class UserResponse {
 
     private String id;
+    private String name;
+    private String email;
+    private List<PhoneResponse> phones;
     private LocalDateTime created;
     private LocalDateTime modified;
     private LocalDateTime lastLogin;
     private String token;
-    private boolean isActive;
+    private boolean active;
+
+    public String getName() {
+        return name;
+    }
+
+    public void setName(String name) {
+        this.name = name;
+    }
+
+    public String getEmail() {
+        return email;
+    }
+
+    public void setEmail(String email) {
+        this.email = email;
+    }
+
+    public List<PhoneResponse> getPhones() {
+        return phones;
+    }
+
+    public void setPhones(List<PhoneResponse> phones) {
+        this.phones = phones;
+    }
 
     public String getId() {
         return id;
@@ -35,6 +65,7 @@ public class UserResponse {
         this.modified = modified;
     }
 
+    @JsonProperty("last_login")
     public LocalDateTime getLastLogin() {
         return lastLogin;
     }
@@ -51,11 +82,12 @@ public class UserResponse {
         this.token = token;
     }
 
-    public boolean isIsActive() {
-        return isActive;
+    @JsonProperty("isactive")
+    public boolean isActive() {
+        return active;
     }
 
-    public void setIsActive(boolean isActive) {
-        this.isActive = isActive;
+    public void setActive(boolean active) {
+        this.active = active;
     }
 }
